--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Autofac" version="5.2.0" targetFramework="net472" />
   <package id="CsvHelper" version="15.0.5" targetFramework="net472" />
-  <package id="Devmasters.Batch" version="2.1.0" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net48" />
+  <package id="Devmasters.Cache.Elastic" version="2.0.2" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.6" targetFramework="net48" />
   <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net48" />
@@ -14,7 +15,7 @@
   <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.1.0" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
-  <package id="Devmasters.Net" version="2.1.3" targetFramework="net48" />
+  <package id="Devmasters.Net" version="2.1.4" targetFramework="net48" />
   <package id="Devmasters.Render" version="1.472.1.1" targetFramework="net472" />
   <package id="Dynamitey" version="2.0.10.189" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
