--- a/Util/packages.config
+++ b/Util/packages.config
@@ -3,7 +3,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="CouchbaseNetClient" version="2.7.18" targetFramework="net472" allowedVersions="(,3.0)" />
-  <package id="Devmasters.Batch" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Core" version="2.1.6" targetFramework="net472" requireReinstallation="true" />
@@ -13,7 +13,7 @@
   <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
-  <package id="Devmasters.Net" version="2.1.3" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Net" version="2.1.4" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
   <package id="IPNetwork2" version="2.5.226" targetFramework="net472" />
