--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -558,6 +558,7 @@
     <Compile Include="Analysis\ContractsStatisticData.cs" />
     <Compile Include="Data\Dotace\StatisticData.cs" />
     <Compile Include="Data\Dotace\Statistics.cs" />
+    <Compile Include="Data\Firma.Statistics.Dotace.cs" />
     <Compile Include="Data\Firma.Statistics.VZ.cs" />
     <Compile Include="Data\Firma.Statistics.VZ.Data.cs" />
     <Compile Include="Data\Firmy.GlobalStatistics.cs" />
