--- a/Lib.Analytics/Lib.Analytics.csproj
+++ b/Lib.Analytics/Lib.Analytics.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
+    <Compile Include="IAddable.cs" />
     <Compile Include="PropertyYearPercentiles.cs" />
     <Compile Include="StatisticsSubjectPerYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
